--- a/functions/package.json
+++ b/functions/package.json
@@ -14,6 +14,7 @@
   },
   "main": "index.js",
   "dependencies": {
+    "@google-cloud/aiplatform": "^4.2.0",
     "@google-cloud/vision": "^5.2.0",
     "firebase-admin": "^12.7.0",
     "firebase-functions": "^6.0.1"
